# ibexDB

./: .gitignore  Cargo.toml  README.md  Rocket.toml  ibex.conf
src/: herd.rs  http_interface.rs  main.rs  persistence.rs
