[package]
name = "ibexDB"
version = "0.1.0"
authors = ["Johann Woelper <woelper@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "*"
rocket_contrib = "0.4.0"
rocket_codegen = "*"
lazy_static = "1.1.0"
# rocket_cors = "0.3.0"
json = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
clap = "2.33.0"
log = "0.4.0"
env_logger = "0.6.1"
reqwest = "0.9.15"
rand = "0.6.5"
# chrono = "0.4.6"